--- a/Meetings/22-01-30.md
+++ b/Meetings/22-01-30.md
@@ -8,12 +8,11 @@ Bujitha Ponsuge
 
 ## Discussion Points
 - General Greeting.
-- Certifications during training.
-- Training Progress.
-- Attendance in whole team meeting tomorow.
-- Find CTF chalenges to compete together to work up teamwork and practice. (Can be online)
+- Get to know each other.
+- Discussed current certifications.
+- Discussed possible training platforms. Online vs In Person.
+- Discussed Training plan (What we we think we need to learn).
 
 ## Tasks to complete
-- Start creating a wiki / data point for notex, information etc (Github).
-- Sawan will find out more information about the Skill Off if possible.
-- Comtinue training Hack the Box Academy.
+- Start training where possible. Chosen HTB Academy.
+- Compete survey.
