--- a/Meetings/22-02-07.md
+++ b/Meetings/22-02-07.md
@@ -16,4 +16,4 @@ Bujitha Ponsuge
 ## Tasks to complete
 - Start creating a wiki / data point for notex, information etc (Github).
 - Sawan will find out more information about the Skill Off if possible.
-- Comtinue training Hack the Box Academy.
+- Continue training Hack the Box Academy.
