--- a/Meetings/22-02-15.md
+++ b/Meetings/22-02-15.md
@@ -9,8 +9,8 @@ layout: default
 - Sawan
 - Biju
 - Chris
-- Matt
-- Ben
+- Matt (Bronze)
+- Ben (Bronze)
 
 ## Discussion Points
 - Sawan took Ben and Matt through their training material / plan.
